style.css
:root {
    --rowNum: 10;
    --colNum: 10;
    --gridHeight: (var(--colNum)*20)px;
}

body {
    background-color: black;
    display:flex;
    justify-content: center;
    align-items: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
.mainBody {
    display:flex;
    flex-flow: row nowrap;
    flex: auto;
    width: 100vw;
    height: 97vh;
    justify-content: stretch;
    align-items: stretch;
    margin: -7px;
}
.middle {
    display: flex;
    flex-flow:column nowrap;
    flex:auto;
    justify-content: center;
    width: auto;
    height: auto;
    align-items: center;
    background-color:antiquewhite;
    border: 2px solid green;
    margin-right: -2px;
}
@keyframes example {
    0% {background-color: violet;}
    50% {background-color: darkgoldenrod;}
    100% {background-color: violet;}
}
.header{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    margin-bottom: auto;
    width: 87vw;
    animation-name: example;
    animation-duration: 4s;
    animation-iteration-count: infinite;
}
.sidebar {
    display: flex;
    flex: auto;
    margin-right: auto;
    flex-flow: column nowrap;
    justify-content: space-evenly;
    align-items: center;
    max-width: fit-content;
    height: auto;
    background-color:cornsilk;
    border: 2px solid #a972cb;
}
.sideBtn {
    display:flex;
    justify-content: center;
    align-items: center;
    color:#a972cb;
    background:none;
    width: 150px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 10px;
    margin-right: 10px;
    font-size: 20px;
    font-weight: bold;
    border: 2px dotted #a972cb;
    border-radius: 25%;
}
.sideBtn:hover,
.sideBtn:focus{
    box-shadow: inset 0 0 0 3em #ffa260;
    transition-duration: 1s;
}

.gridBox {
    height: 480px;
    width:400px;
    margin-bottom: auto;
    margin-left: auto;
    margin-right: auto;
    background-color: blue;
    display: grid;
    gap:2px;
    grid-auto-flow: row;
    grid-template-columns: repeat(var(--colNum), auto);
    grid-template-rows: repeat(var(--rowNum), auto);
    justify-content: stretch;
    align-items: stretch;
     
}
.grid {
    display: flex;
    flex: 1 1 10px;
    border: 2px solid red;
    flex-flow: row wrap;
    background-color: white;
}
.active {
    display: flex;
    flex: 1 1 10px;
    border: 2px solid red;
    flex-flow: row wrap;
    background-color: black;
}

